--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
    "source": [
     "s1dcnn_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"early_stopping\": True,\n",
     "        \"shuffle\": True,\n",
@@ -72,7 +72,7 @@
     "\n",
     "s1dcnn_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"early_stopping\": True,\n",
     "        \"shuffle\": True,\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
     "# Set the desired parameters\n",
     "resnet_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"early_stopping\": True,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -134,7 +134,7 @@
     "# Set the desired parameters\n",
     "resnet_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"early_stopping\": True,\n",
     "        \"early_stopping_patience\": 4,\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
     "        \"early_stopping\": True,\n",
     "        \"cv_size\": 5,\n",
     "        \"validation_fraction\": 0.15,\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"n_iter_no_change\": 30,\n",
     "        \"max_iter\": 1000,\n",
     "    },\n",
@@ -239,7 +239,7 @@
     "        \"early_stopping\": True,\n",
     "        \"cv_size\": 5,\n",
     "        \"validation_fraction\": 0.15,\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"n_iter_no_change\": 50,\n",
     "        \"max_iter\": 1000,\n",
     "    },\n",
@@ -264,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "xgb_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_rounds\": 50,\n",
     "        \"verbose\": False,\n",
@@ -291,7 +291,7 @@
     "\n",
     "xgb_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_rounds\": 50,\n",
     "        \"verbose\": False,\n",
@@ -320,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
    "source": [
     "catboost_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_rounds\": 50,\n",
     "        \"verbose\": False,\n",
@@ -343,7 +343,7 @@
     "\n",
     "catboost_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_rounds\": 50,\n",
     "        \"verbose\": False,\n",
@@ -368,14 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
    "source": [
     "gate_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -405,7 +405,7 @@
     "\n",
     "gate_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -444,14 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
    "source": [
     "tabnet_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 32,\n",
     "        \"tol\": 0.001,\n",
@@ -481,7 +481,7 @@
     "\n",
     "tabnet_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -520,14 +520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "fttransformer_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -560,7 +560,7 @@
     "\n",
     "fttransformer_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -570,12 +570,12 @@
     "        \"attn_feature_importance\": False,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048],\n",
-    "    \"num_heads\": [4, 8],\n",
-    "    \"input_embed_dim_multiplier\": [2, 6],\n",
+    "    \"num_heads\": [4, 6],\n",
+    "    \"input_embed_dim_multiplier\": [2, 4],\n",
     "    \"embedding_initialization\": [\"kaiming_uniform\", \"kaiming_normal\"],\n",
     "    \"embedding_dropout\": [0.05, 0.2],\n",
     "    \"shared_embedding_fraction\": [0.125, 0.25, 0.5],\n",
-    "    \"num_attn_blocks\": [4, 7],\n",
+    "    \"num_attn_blocks\": [4, 6],\n",
     "    \"attn_dropout\": [0.05, 0.2],\n",
     "    \"add_norm_dropout\": [0.05, 0.2],\n",
     "    \"ff_dropout\": [0.05, 0.2],\n",
@@ -602,14 +602,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "gandalf_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -633,7 +633,7 @@
     "\n",
     "gandalf_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -666,14 +666,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
    "source": [
     "node_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -704,7 +704,7 @@
     "\n",
     "node_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -744,14 +744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 74,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
    "source": [
     "catembed_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -785,7 +785,7 @@
     "\n",
     "catembed_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -825,14 +825,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 75,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "tabtransformer_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -863,7 +863,7 @@
     "\n",
     "tabtransformer_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -903,14 +903,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 76,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
    "source": [
     "autoint_small_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -952,7 +952,7 @@
     "\n",
     "autoint_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 50,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 77,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1183,9 +1183,6 @@
       "### XGB ###\n",
       "('covertype', 'xgb')\n",
       "### CATBOOST ###\n",
-      "('diabetes', 'catboost')\n",
-      "('creditcard', 'catboost')\n",
-      "('covertype', 'catboost')\n",
       "### MLP ###\n",
       "('covertype', 'mlp')\n",
       "### TABNET ###\n",
@@ -1236,7 +1233,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
+   "id": "9288a35a-015b-410d-984e-bc970373cf8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### IRIS ###\n",
+      "### TITANIC ###\n",
+      "('titanic', 'resnet')\n",
+      "### BREASTCANCER ###\n",
+      "### AGECONDITIONS ###\n",
+      "('ageconditions', 'resnet')\n",
+      "### DIABETES ###\n",
+      "('diabetes', 'gate')\n",
+      "('diabetes', 'fttransformer')\n",
+      "('diabetes', 'tabtransformer')\n",
+      "### ADULT ###\n",
+      "### HOUSING ###\n",
+      "('housing', 'gate')\n",
+      "('housing', 'resnet')\n",
+      "('housing', 's1dcnn')\n",
+      "('housing', 'fttransformer')\n",
+      "('housing', 'tabtransformer')\n",
+      "('housing', 'gandalf')\n",
+      "### CREDITCARD ###\n",
+      "('creditcard', 'gate')\n",
+      "('creditcard', 'resnet')\n",
+      "('creditcard', 's1dcnn')\n",
+      "('creditcard', 'fttransformer')\n",
+      "('creditcard', 'gandalf')\n",
+      "### HELOC ###\n",
+      "('heloc', 'resnet')\n",
+      "('heloc', 'fttransformer')\n",
+      "### COVERTYPE ###\n",
+      "('covertype', 'xgb')\n",
+      "('covertype', 'mlp')\n",
+      "('covertype', 'tabnet')\n",
+      "('covertype', 'gate')\n",
+      "('covertype', 'resnet')\n",
+      "('covertype', 's1dcnn')\n",
+      "('covertype', 'fttransformer')\n",
+      "('covertype', 'autoint')\n",
+      "('covertype', 'node')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for mod in included_datasets:\n",
+    "    print(f\"### {mod.upper()} ###\")\n",
+    "    matching_combos = [i for i in total_missing_combos if mod in i]\n",
+    "    for combo in matching_combos:\n",
+    "        print(combo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -1277,46 +1332,44 @@
     "\n",
     "templates3 = [\n",
     "generate_model_template(\n",
-    "\"creditcard\", \"gandalf\", param_grid=catboost_large_param_grid.copy()\n",
+    "\"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"creditcard\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
+    "\"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"creditcard\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
+    "\"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "),\n",
     "\n",
     "]\n",
     "\n",
-    "templates4 = [generate_model_template(\n",
-    "\"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "templates4 = [\n",
+    "generate_model_template(\n",
+    "\"covertype\", \"node\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"creditcard\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "\"covertype\", \"tabnet\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"covertype\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "\"covertype\", \"autoint\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "),\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "),\n",
+    "\n",
     "generate_model_template(\n",
     "\"covertype\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"creditcard\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "\"covertype\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"heloc\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "),       \n",
-    "generate_model_template(\n",
-    "\"heloc\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "),]"
+    "\"covertype\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "),\n",
+    "\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 82,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1325,26 +1378,21 @@
     {
      "data": {
       "text/plain": [
-       "[('creditcard', 'catboost'),\n",
-       " ('creditcard', 'gate'),\n",
-       " ('creditcard', 'resnet'),\n",
-       " ('creditcard', 's1dcnn'),\n",
-       " ('creditcard', 'fttransformer'),\n",
-       " ('creditcard', 'gandalf')]"
+       "[('heloc', 'resnet'), ('heloc', 'fttransformer')]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"creditcard\" in i]"
+    "[i for i in total_missing_combos if \"heloc\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1358,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1382,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1394,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
    "metadata": {},
    "outputs": [],
@@ -1406,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 88,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
