--- a/notebooks/DatasetsExploration.ipynb
+++ b/notebooks/DatasetsExploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "61d7a5af",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "05254e38-ede9-4329-bba4-95de52c1279a",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "5ee32f3d-6889-4311-9ae0-82e98dbcdc7a",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "Name: target, Length: 20640, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "edf7567c-f248-4151-8add-d5f25e4996d9",
    "metadata": {},
    "outputs": [
@@ -89,39 +89,14 @@
       "[0, 687, 1374, 2061, 2748, 3435, 4122, 4809, 5496, 6183, 6870]\n",
       "[0, 676, 1352, 2028, 2704, 3380, 4056, 4732, 5408, 6084, 6760]\n",
       "[0, 1156, 2312, 3468, 4624, 5780, 6936, 8092, 9248, 10404, 11560]\n",
-      "SUCCESS diabetes\n",
-      "\n",
-      "Aggregated Dataset Summary:\n",
-      "         Dataset     Target Type Total Samples Num Classes Pos. Class Rate  \\\n",
-      "0     creditcard  Classification        284807           2          0.0017   \n",
-      "1           iris  Classification           150           3            None   \n",
-      "2        titanic  Classification           891           2          0.3838   \n",
-      "3   breastcancer  Classification           569           2          0.6274   \n",
-      "4        housing      Regression         20640        None            None   \n",
-      "5  ageconditions  Classification           622           2          0.1736   \n",
-      "6          adult  Classification         32561           2          0.2408   \n",
-      "7          heloc  Classification         10459           2          0.5219   \n",
-      "8      covertype  Classification        281011           7            None   \n",
-      "9       diabetes  Classification        101766           2          0.1116   \n",
-      "\n",
-      "  Total Features Num Categorical Num Numerical  \n",
-      "0             30               0            30  \n",
-      "1              4               0             4  \n",
-      "2             12               5             7  \n",
-      "3             30               0            30  \n",
-      "4             10               0            10  \n",
-      "5             56               0            56  \n",
-      "6             15               8             7  \n",
-      "7             24               0            24  \n",
-      "8             54               0            54  \n",
-      "9             47              39             8  \n"
+      "SUCCESS diabetes\n"
      ]
     }
    ],
    "source": [
     "# Create an empty DataFrame to store dataset summaries\n",
     "summary_data = pd.DataFrame(columns=['Dataset', 'Target Type', 'Total Samples', \n",
-    "                                      'Num Classes', \"Pos. Class Rate\", 'Total Features', 'Num Categorical', 'Num Numerical'])\n",
+    "                                      'Num Classes', \"Pos. Class Rate (%)\", 'Total Features', 'Num Categorical', 'Num Numerical'])\n",
     "\n",
     "# Your data loader loop\n",
     "loaders = [\n",
@@ -151,7 +126,7 @@
     "        num_categorical = X.select_dtypes(include=['object']).shape[1]\n",
     "        num_numerical = X.select_dtypes(include=['number']).shape[1]\n",
     "        if num_classes == 2:\n",
-    "            class_freq = round(y.sum()/len(y),4)\n",
+    "            class_freq = round(100*y.sum()/len(y),2)\n",
     "        else:\n",
     "            class_freq = None\n",
     "                               \n",
@@ -169,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "3277002d-4581-4a3b-aecb-1cc8c812ecd2",
    "metadata": {},
    "outputs": [],
@@ -179,20 +154,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "8001ba04-356f-4498-80ee-ece1adf32b30",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'summary_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msummary_data\u001b[49m\u001b[38;5;241m.\u001b[39msort_values(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal Samples\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'summary_data' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>Target Type</th>\n",
+       "      <th>Total Samples</th>\n",
+       "      <th>Num Classes</th>\n",
+       "      <th>Pos. Class Rate (%)</th>\n",
+       "      <th>Total Features</th>\n",
+       "      <th>Num Categorical</th>\n",
+       "      <th>Num Numerical</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>iris</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>breastcancer</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>569</td>\n",
+       "      <td>2</td>\n",
+       "      <td>62.74</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ageconditions</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>622</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17.36</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>titanic</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>891</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38.38</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>heloc</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>10459</td>\n",
+       "      <td>2</td>\n",
+       "      <td>52.19</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>Regression</td>\n",
+       "      <td>20640</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>adult</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>32561</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24.08</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>diabetes</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>101766</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.16</td>\n",
+       "      <td>47</td>\n",
+       "      <td>39</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>covertype</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>281011</td>\n",
+       "      <td>7</td>\n",
+       "      <td>None</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>creditcard</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>284807</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Dataset     Target Type Total Samples Num Classes  \\\n",
+       "1           iris  Classification           150           3   \n",
+       "3   breastcancer  Classification           569           2   \n",
+       "5  ageconditions  Classification           622           2   \n",
+       "2        titanic  Classification           891           2   \n",
+       "7          heloc  Classification         10459           2   \n",
+       "4        housing      Regression         20640        None   \n",
+       "6          adult  Classification         32561           2   \n",
+       "9       diabetes  Classification        101766           2   \n",
+       "8      covertype  Classification        281011           7   \n",
+       "0     creditcard  Classification        284807           2   \n",
+       "\n",
+       "  Pos. Class Rate (%) Total Features Num Categorical Num Numerical  \n",
+       "1                None              4               0             4  \n",
+       "3               62.74             30               0            30  \n",
+       "5               17.36             56               0            56  \n",
+       "2               38.38             12               5             7  \n",
+       "7               52.19             24               0            24  \n",
+       "4                None             10               0            10  \n",
+       "6               24.08             15               8             7  \n",
+       "9               11.16             47              39             8  \n",
+       "8                None             54               0            54  \n",
+       "0                0.17             30               0            30  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -201,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "a57ba80c-d51d-49b6-a047-510e8e73e6b5",
    "metadata": {},
    "outputs": [
@@ -209,29 +349,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "╒════╤═══════════════╤════════════════╤═════════════════╤═══════════════╤═══════════════════╤══════════════════╤═══════════════════╤═════════════════╕\n",
-      "│    │ Dataset       │ Target Type    │   Total Samples │   Num Classes │   Pos. Class Rate │   Total Features │   Num Categorical │   Num Numerical │\n",
-      "╞════╪═══════════════╪════════════════╪═════════════════╪═══════════════╪═══════════════════╪══════════════════╪═══════════════════╪═════════════════╡\n",
-      "│  0 │ creditcard    │ Classification │          284807 │             2 │            0.0017 │               30 │                 0 │              30 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  1 │ iris          │ Classification │             150 │             3 │                   │                4 │                 0 │               4 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  2 │ titanic       │ Classification │             891 │             2 │            0.3838 │               12 │                 5 │               7 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  3 │ breastcancer  │ Classification │             569 │             2 │            0.6274 │               30 │                 0 │              30 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  4 │ housing       │ Regression     │           20640 │               │                   │               10 │                 0 │              10 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  5 │ ageconditions │ Classification │             622 │             2 │            0.1736 │               56 │                 0 │              56 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  6 │ adult         │ Classification │           32561 │             2 │            0.2408 │               15 │                 8 │               7 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  7 │ heloc         │ Classification │           10459 │             2 │            0.5219 │               24 │                 0 │              24 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  8 │ covertype     │ Classification │          281011 │             7 │                   │               54 │                 0 │              54 │\n",
-      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
-      "│  9 │ diabetes      │ Classification │          101766 │             2 │            0.1116 │               47 │                39 │               8 │\n",
-      "╘════╧═══════════════╧════════════════╧═════════════════╧═══════════════╧═══════════════════╧══════════════════╧═══════════════════╧═════════════════╛\n"
+      "╒════╤═══════════════╤════════════════╤═════════════════╤═══════════════╤═══════════════════════╤══════════════════╤═══════════════════╤═════════════════╕\n",
+      "│    │ Dataset       │ Target Type    │   Total Samples │   Num Classes │   Pos. Class Rate (%) │   Total Features │   Num Categorical │   Num Numerical │\n",
+      "╞════╪═══════════════╪════════════════╪═════════════════╪═══════════════╪═══════════════════════╪══════════════════╪═══════════════════╪═════════════════╡\n",
+      "│  0 │ creditcard    │ Classification │          284807 │             2 │                0.1727 │               30 │                 0 │              30 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  1 │ iris          │ Classification │             150 │             3 │                       │                4 │                 0 │               4 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  2 │ titanic       │ Classification │             891 │             2 │               38.3838 │               12 │                 5 │               7 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  3 │ breastcancer  │ Classification │             569 │             2 │               62.7417 │               30 │                 0 │              30 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  4 │ housing       │ Regression     │           20640 │               │                       │               10 │                 0 │              10 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  5 │ ageconditions │ Classification │             622 │             2 │               17.3633 │               56 │                 0 │              56 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  6 │ adult         │ Classification │           32561 │             2 │               24.081  │               15 │                 8 │               7 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  7 │ heloc         │ Classification │           10459 │             2 │               52.1943 │               24 │                 0 │              24 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  8 │ covertype     │ Classification │          281011 │             7 │                       │               54 │                 0 │              54 │\n",
+      "├────┼───────────────┼────────────────┼─────────────────┼───────────────┼───────────────────────┼──────────────────┼───────────────────┼─────────────────┤\n",
+      "│  9 │ diabetes      │ Classification │          101766 │             2 │               11.1599 │               47 │                39 │               8 │\n",
+      "╘════╧═══════════════╧════════════════╧═════════════════╧═══════════════╧═══════════════════════╧══════════════════╧═══════════════════╧═════════════════╛\n"
      ]
     }
    ],
