--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 116,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 117,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 118,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,29 @@
     "        \"tol\": 0.0001,\n",
     "        \"validation_fraction\": 0.15,\n",
     "    },\n",
-    "    \"batch_size\": [1024, 2048, 4096],\n",
+    "    \"batch_size\": [2048, 4096],\n",
+    "    \"resnet_depth\": [\"resnet18\", \"resnet34\", \"resnet50\"],\n",
+    "    \"optimizer_fn\": {\n",
+    "        \"Adam\": {\"weight_decay\": [0.00001, 0.001], \"learning_rate\": [0.0001, 0.001]},\n",
+    "        \"AdamW\": {\"weight_decay\": [0.00001, 0.001], \"learning_rate\": [0.0001, 0.001]},\n",
+    "    },\n",
+    "    \"scheduler_fn\": {\n",
+    "        \"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [3, 5]},\n",
+    "        \"ExponentialLR\": {\"gamma\": [0.9, 0.99]},  # Adjusted for ExponentialLR\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "# Set the desired parameters\n",
+    "resnet_creditcard_param_grid = {\n",
+    "    \"outer_params\": {\n",
+    "        \"hyperopt_evals\": 10,\n",
+    "        \"max_epochs\": 1000,\n",
+    "        \"early_stopping\": True,\n",
+    "        \"early_stopping_patience\": 2,\n",
+    "        \"tol\": 0.0000001,\n",
+    "        \"validation_fraction\": 0.15,\n",
+    "    },\n",
+    "    \"batch_size\": [2048, 4096],\n",
     "    \"resnet_depth\": [\"resnet18\", \"resnet34\", \"resnet50\"],\n",
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.00001, 0.001], \"learning_rate\": [0.0001, 0.001]},\n",
@@ -164,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 119,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 120,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 121,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 122,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 123,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -414,7 +436,7 @@
     "        \"early_stopping_patience\": 3,\n",
     "    },\n",
     "    # \"learning_rate\": [0.01, 0.001],\n",
-    "    \"batch_size\": [1024, 2048, 4096],\n",
+    "    \"batch_size\": [2048, 4096],\n",
     "    \"tree_depth\": [4, 6],\n",
     "    \"num_trees\": [4, 8],\n",
     "    #\"chain_trees\": [False, True],\n",
@@ -444,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 124,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -491,7 +513,7 @@
     "    },\n",
     "    # \"learning_rate\": [0.001, 0.0001],\n",
     "    \"virtual_batch_size_ratio\": [0.125, 0.25, 0.5, 1.0],\n",
-    "    \"batch_size\": [1024, 2048, 4096],\n",
+    "    \"batch_size\": [2048, 4096],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
     "    \"n_d\": [6, 24],\n",
@@ -520,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 125,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 126,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -641,7 +663,7 @@
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 3,\n",
     "    },\n",
-    "    \"batch_size\": [1024, 2048, 4096],\n",
+    "    \"batch_size\": [2048, 4096],\n",
     "    \"gflu_stages\": [4, 10],\n",
     "    \"gflu_dropout\": [0.0, 0.3],\n",
     "    \"embedding_dropout\": [0.0, 0.3],\n",
@@ -666,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 127,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 128,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -795,7 +817,7 @@
     "        \"precision\": 16,\n",
     "        \"tol\": 0.001,\n",
     "    },\n",
-    "    \"batch_size\": [1024, 2048, 4096],\n",
+    "    \"batch_size\": [2048, 4096],\n",
     "    \"layers\": [\"128-64-32\", \"100-50-24\", \"128-64-32-16\", \"256-128-64\"],\n",
     "    \"activation\": [\n",
     "        \"ReLU\",\n",
@@ -825,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 129,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -871,7 +893,7 @@
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 3,\n",
     "    },\n",
-    "    \"batch_size\": [1024, 2048, 4096],\n",
+    "    \"batch_size\": [2048, 4096],\n",
     "    \"embedding_bias\": [True, False],\n",
     "    \"embedding_initialization\": [\"kaiming_uniform\", \"kaiming_normal\"],\n",
     "    \"shared_embedding_fraction\": [0.125, 0.25, 0.5],\n",
@@ -903,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 130,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 131,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 132,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 133,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1193,11 +1215,8 @@
       "('creditcard', 'gate')\n",
       "('covertype', 'gate')\n",
       "### RESNET ###\n",
-      "('titanic', 'resnet')\n",
-      "('ageconditions', 'resnet')\n",
       "('housing', 'resnet')\n",
       "('creditcard', 'resnet')\n",
-      "('heloc', 'resnet')\n",
       "('covertype', 'resnet')\n",
       "### S1DCNN ###\n",
       "('housing', 's1dcnn')\n",
@@ -1205,7 +1224,6 @@
       "('covertype', 's1dcnn')\n",
       "### CATEGORYEMBEDDING ###\n",
       "### FTTRANSFORMER ###\n",
-      "('diabetes', 'fttransformer')\n",
       "('housing', 'fttransformer')\n",
       "('creditcard', 'fttransformer')\n",
       "('heloc', 'fttransformer')\n",
@@ -1233,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 134,
    "id": "9288a35a-015b-410d-984e-bc970373cf8c",
    "metadata": {},
    "outputs": [
@@ -1241,15 +1259,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Total Missing Runs:  23\n",
       "### IRIS ###\n",
       "### TITANIC ###\n",
-      "('titanic', 'resnet')\n",
       "### BREASTCANCER ###\n",
       "### AGECONDITIONS ###\n",
-      "('ageconditions', 'resnet')\n",
       "### DIABETES ###\n",
       "('diabetes', 'gate')\n",
-      "('diabetes', 'fttransformer')\n",
       "('diabetes', 'tabtransformer')\n",
       "### ADULT ###\n",
       "### HOUSING ###\n",
@@ -1266,7 +1282,6 @@
       "('creditcard', 'fttransformer')\n",
       "('creditcard', 'gandalf')\n",
       "### HELOC ###\n",
-      "('heloc', 'resnet')\n",
       "('heloc', 'fttransformer')\n",
       "### COVERTYPE ###\n",
       "('covertype', 'xgb')\n",
@@ -1282,78 +1297,41 @@
     }
    ],
    "source": [
+    "print(\"Total Missing Runs: \", len(total_missing_combos))\n",
     "for mod in included_datasets:\n",
     "    print(f\"### {mod.upper()} ###\")\n",
     "    matching_combos = [i for i in total_missing_combos if mod in i]\n",
     "    for combo in matching_combos:\n",
-    "        print(combo)"
+    "        print(combo)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 135,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
     "generate_model_template(\n",
-    "\"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "\"creditcard\", \"resnet\", param_grid=resnet_creditcard_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
+    "\"heloc\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "),\n",
-    "generate_model_template(\n",
-    "\"ageconditions\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "),\n",
-    "\n",
     "]\n",
-    "\n",
     "\n",
     "templates2 = [\n",
-    "\n",
     "generate_model_template(\n",
-    "\"diabetes\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
+    "\"covertype\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"breastcancer\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
+    "\"covertype\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"creditcard\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
+    "\"covertype\", \"node\", param_grid=node_large_param_grid.copy()\n",
     "),\n",
-    "generate_model_template(\n",
-    "\"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()),\n",
-    "\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
-    "),\n",
-    "]\n",
-    "\n",
-    "\n",
-    "templates3 = [\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "),\n",
-    "\n",
-    "]\n",
-    "\n",
-    "templates4 = [\n",
-    "generate_model_template(\n",
-    "\"covertype\", \"node\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"covertype\", \"tabnet\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"covertype\", \"autoint\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "),\n",
-    "\n",
     "generate_model_template(\n",
     "\"covertype\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "),\n",
@@ -1361,15 +1339,33 @@
     "\"covertype\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"covertype\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "\"covertype\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
+    "),\n",
+    "]\n",
+    "\n",
+    "templates3 = [\n",
+    "generate_model_template(\n",
+    "\"covertype\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
     "),\n",
     "\n",
+    "]\n",
+    "\n",
+    "templates4 = [\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 136,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1378,21 +1374,25 @@
     {
      "data": {
       "text/plain": [
-       "[('heloc', 'resnet'), ('heloc', 'fttransformer')]"
+       "[('creditcard', 'gate'),\n",
+       " ('creditcard', 'resnet'),\n",
+       " ('creditcard', 's1dcnn'),\n",
+       " ('creditcard', 'fttransformer'),\n",
+       " ('creditcard', 'gandalf')]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"heloc\" in i]"
+    "[i for i in total_missing_combos if \"creditcard\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 137,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 138,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 139,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 140,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 141,
    "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
    "metadata": {},
    "outputs": [],
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 142,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
